move template api to api module